--- a/scss/_zcontacto.scss
+++ b/scss/_zcontacto.scss
@@ -98,10 +98,10 @@
     .contenedor_mapa{
         position: relative;
     height: 314px;
-    margin-bottom: 2%;
+    padding: 0;
     }
     .tamaño_mapa{
-        min-width: 103%;
+        width: 100%;
         object-fit: contain;
         height: 100%;
     }
