--- a/scss/_zdetalle_inmueble.scss
+++ b/scss/_zdetalle_inmueble.scss
@@ -1,13 +1,20 @@
 #contacto{
     .caja{
-    padding-top: 7px;
-    padding-bottom: 5px;
-    -webkit-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.1);
-    width: 486px;
-    position: relative;
-    margin: auto;
+        padding-top: 7px;
+        padding-bottom: 5px;
+        -webkit-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.1);
+        width: inherit;
+        position: relative;
+        margin: auto;
+    @include media-breakpoint-up(md){
+        width: inherit;
+        
+    }
+    @include media-breakpoint-up(lg){
+        width: 486px;
+    }
     img{
         object-fit: cover;
     }
@@ -16,12 +23,33 @@
     }
     }
     .caja_texto{
-    padding: 6%;
-    margin-top: -6%;
+        padding: 5%;
+        margin-top: -4%;
+    @include media-breakpoint-up(md){
+        padding: 15px;
+    margin-top: -2%;
+        
+    }
+    @include media-breakpoint-up(lg){
+        padding: 3%;
+        margin-top: -3%;
+    }
+
     }
     .div_condiciones{
-    padding: 3%;
-    margin-top: -10%;
+        
+        padding: 0%;
+        margin-top: -2%;
+    @include media-breakpoint-up(md){
+    padding: 1%;
+    
+    margin-top: -4%;
+        
+    }
+    @include media-breakpoint-up(lg){
+        padding: 0%;
+        margin-top: 0%;
+    }
     }
     .color_a_condiciones{
         color: $color_azul;
@@ -30,8 +58,32 @@
         }
     }
     .texto_compartir{
-    margin-top: 19px;
-    margin-left: -10%;
+        margin-top: 19px;
+        margin-left: 7%;
+        left: 0%;
+    @include media-breakpoint-up(md){
+        margin-top: 11px;
+        margin-left: 7%;
+        left: 0%;
+        
+    }
+    @include media-breakpoint-up(lg){
+        margin-top: 19px;
+        margin-left: -5%;
+    }
+    }
+    .compartir{
+        padding-right: 15%;
+        @include media-breakpoint-up(md){
+            padding-right: inherit;
+            
+        }
+    }
+    .margen_icon{
+        margin-left: -60%;
+        @include media-breakpoint-up(md){
+            margin-left: inherit    ;
+        }
     }
     .color_comparit{
         background-color: $color_azul_oscuro;
@@ -48,7 +100,19 @@
     }
     .icon_foot{
         font-size: 23px;
+    
+        
+        @include media-breakpoint-up(md){
+            font-size: 23px;
+            margin-left: 6%;
+            
+        }
+        @include media-breakpoint-up(lg){
+            font-size: 23px;
+            margin-left: 4%;
         padding: 0px;
+        
+        }
     }
     .container_icon_compartir{
         margin-left: 2%;
@@ -92,7 +156,14 @@
     }
 }
 #cont_margen_total{
-    margin-top: 5%;
+    margin-top: 25%;
+    @include media-breakpoint-up(md){
+        margin-top: 15%;
+        
+    }
+    @include media-breakpoint-up(lg){
+        margin-top: 5%;
+    }
 }
 .color_asesor{
     color: $color_azul;
@@ -100,5 +171,35 @@
     &:hover{
         color: $color_azul_oscuro;
         text-decoration: none;
+    }
+}
+.texto_asesor{
+    visibility: hidden;
+    @include media-breakpoint-up(md){
+    visibility: hidden;
+        
+    }
+    @include media-breakpoint-up(lg){
+        visibility: inherit;
+    }
+}
+#texto_asesor2{
+    visibility: inherit;
+    @include media-breakpoint-up(md){
+        visibility: inherit;
+        
+    }
+    @include media-breakpoint-up(lg){
+        position: fixed;
+        visibility: hidden;
+    }
+}
+.contenedor_simialres{
+    padding: inherit;
+    @include media-breakpoint-up(md){
+        padding: 3rem;
+    }
+    @include media-breakpoint-up(lg){
+        padding: 3rem;
     }
 }
