--- a/scss/_zquienes_somos.scss
+++ b/scss/_zquienes_somos.scss
@@ -123,6 +123,60 @@
       
 
 }
+#slider22_mision_vision{
+    h5{
+     
+     font-size: 24px;
+     line-height: 1.5;
+     letter-spacing: 1px;
+    }
+    p{
+        color: black;
+    }
+    .color{
+        color: black;
+        font-size: 253%;
+    }
+    .cont_top{
+     margin-bottom: 10%;
+     color: $color_dorado;
+     @include media-breakpoint-up(md){
+         margin-bottom: 21%;
+     }
+     @include media-breakpoint-up(lg){
+         margin-bottom: 10%;
+     }
+    }
+    .cont_top_valores{
+     margin-bottom: 6%;
+     
+    }
+    #cont_top_valores2{
+     margin-bottom: 7%;
+     @include media-breakpoint-up(md){
+         margin-bottom: 14%;
+     }
+     @include media-breakpoint-up(lg){
+         margin-bottom: 10%;
+     }
+     
+    }
+    #valores{
+     margin-bottom: 5%;
+    }
+    h2{
+     margin-bottom: 5%;
+    }
+    .color_titulo{
+     color: $color_dorado;
+    }
+    .color_titulo_valores{
+        color: $color_azul_oscuro;
+        font-weight: bold;
+    }
+       
+ 
+ }
 .cont_contacto_nav_2{
     visibility: hidden;
     @include media-breakpoint-up(md){
@@ -134,4 +188,74 @@
 }
 .cont_btn_contact{
     text-align: end;
+}
+
+.slider1_quienes{
+visibility: hidden;
+display: none;
+@include media-breakpoint-up(md){
+    visibility:inherit;
+    display: inherit;
+}
+@include media-breakpoint-up(lg){
+visibility:inherit;
+display: initial;
+}
+}
+.slider22_quienes{
+visibility: inherit;
+display: inherit;
+@include media-breakpoint-up(md){
+    visibility: hidden;
+    display: none;
+}
+@include media-breakpoint-up(lg){
+    visibility: hidden;
+    display: none;
+}
+}
+.bd-example{
+    margin-left: 5%;
+}
+
+.tamaños_parrafo{
+    font-size: 72%;
+}
+#color_titulo_valores22{
+    color: #002230;
+    font-weight: bold;
+    font-size: 13px !important;
+    line-height: 1.5;
+    letter-spacing: 1px;
+}
+.color_titulo22{
+    color: #B58D10;
+    font-size: 95%;
+}
+.cont_top_valores22{
+    margin-bottom: -8%;
+}
+.bd-example22{
+    margin-left: 0%;
+}
+.cont_top_valores222{
+    margin-bottom: -14%;
+}
+.carousel-indicators{
+visibility: hidden !important;
+}
+.cont_top_valores_mision22{
+    margin-bottom: -5%;
+}
+.cont_top_valores_honestidad22{
+    margin-bottom: -7%;
+}
+.cont_top_valores_responsa22{
+    margin-bottom: -11%;
+}
+.cont_top_valores_respeto22{
+    margin-bottom: -3%;
+}
+.cont_top_valores_calidad222{
+    margin-bottom: -6%;
 }
