--- a/scss/_zquienes_somos.scss
+++ b/scss/_zquienes_somos.scss
@@ -254,8 +254,27 @@ visibility: hidden !important;
     margin-bottom: -11%;
 }
 .cont_top_valores_respeto22{
-    margin-bottom: -3%;
+    margin-bottom: -12%;
+}
+.carousel-control-next{
+    bottom: -10px;
+}
+.carousel-control-prev{
+    bottom: -10px;
 }
 .cont_top_valores_calidad222{
     margin-bottom: -6%;
 }
+.carousel-caption2 {
+    position: absolute;
+    right: 1%;
+    width: 100%;
+    bottom: 20px;
+    left: 1%;
+    z-index: 10;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #fff;
+    text-align: center;
+}
+
