se realizan validacins de contador de inmuebles

--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -676,6 +676,17 @@ p, span, b {
     }
     
 }
+.active{
+ 
+}
+
+.titulo_totalinmuebles{
+    text-align: center;
+    font-family: 'roboto';
+}
+.color_dorado{
+    color: $color_dorado;
+}
 #ultimas_noticias{
     
     .letra_titulo{
