--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -985,11 +985,22 @@ p, span, b {
 }
 
 .dimencion_boton_pse_movil{
-    width:20%;
-    @include media-breakpoint-up(md){
-        width:11%;
+    @media(max-width: 768px){
+        width: 114%;
+        padding-top: 10px;
+        margin-left: -5%;
     }
-}
+    @media(max-width: 425px){
+        width: 100%;
+    padding-top: 10px;
+    margin-left: -6%;
+    }
+    @media(max-width: 360px){
+        width: 130%;
+        padding-top: 10px;
+        margin-left: -12%;
+    }
+    }
 
 .subir {
     display: none;
@@ -1230,6 +1241,54 @@ p, span, b {
 }
    
 .tamaño_wapp_movil{
-    font-size: 47px;
+    
+    @media (max-width: 768px){
+        font-size: 38px;
+    }
+    @media (max-width: 425px){
+        font-size: 38px;
+    }
+    @media (max-width: 360px){
+        font-size: 35px;
+    }
+    @media (max-width: 250px){
+        font-size: 35px;
+    }
+    
+}
+
+#seccion_redes {
+    @media (max-width: 768px){
+        background-color: white;
+        height: 100px;
+        position: fixed;
+        top: 510px;
+        right: 0;
+        z-index: 1000;
+    }
+    @media(max-width: 450px){
+        background-color: white;
+        height: 100px;
+        position: fixed;
+        top: 236px;
+        right: 0;
+        z-index: 1000;
+    }
+    @media(max-width: 360px){
+        background-color: white;
+        height: 100px;
+        position: fixed;
+        top: 200px;
+        right: 0;
+        z-index: 1000;
+    }
+    @media(max-width: 250px){
+        background-color: white;
+        height: 100px;
+        position: fixed;
+        top: 200px;
+        right: 0;
+        z-index: 1000;
+    }
     
 }
