se realzian cambios en footer

--- a/css/style.css
+++ b/css/style.css
@@ -9169,7 +9169,12 @@ p, span, b {
     .texto_footer {
       text-align: justify;
       padding: 0%;
-      padding-left: 3%; } }
+      padding-left: 4%; } }
+
+.texto_footer2 {
+  text-align: justify;
+  padding: 0%;
+  padding-left: 7%; }
 
 .tex-politica {
   margin-right: 10%;
@@ -9180,7 +9185,7 @@ p, span, b {
       margin-left: 0%; } }
   @media (min-width: 992px) {
     .tex-politica {
-      margin-right: 0%;
+      margin-right: -3%;
       margin-left: 0%; } }
 
 .conten_header {
